--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -144,6 +144,8 @@ allow 152.32.206.127;
 allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
+allow 154.41.95.1;
+allow 154.41.95.2;
 allow 154.53.58.161;
 allow 157.66.25.92;
 allow 158.174.210.51;
@@ -638,7 +640,6 @@ allow 198.98.48.33;
 allow 198.98.48.35;
 allow 198.98.50.199;
 allow 198.98.51.189;
-allow 198.98.51.249;
 allow 198.98.57.151;
 allow 198.98.57.74;
 allow 198.98.61.60;
@@ -895,6 +896,7 @@ allow 209.141.55.26;
 allow 209.141.58.254;
 allow 209.141.61.52;
 allow 212.21.66.6;
+allow 212.34.142.89;
 allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
@@ -945,6 +947,7 @@ allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
 allow 23.236.122.193;
+allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8902::f03c:95ff:fe1e:6065;
 allow 2400:8905::f03c:95ff:fe67:ec03;
@@ -995,7 +998,6 @@ allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1362::2;
-allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1254,6 +1256,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1503,7 +1506,6 @@ allow 2a0e:4005:1002:ffff:185:40:4:44;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:97c0:3e3:b6::1;
-allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc2:0:24::3456;
@@ -1536,7 +1538,6 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
-allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:1467::;
 allow 2a11:6100:0:156b::;
@@ -1761,6 +1762,7 @@ allow 51.81.222.62;
 allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1865,6 +1867,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -1900,7 +1903,6 @@ allow 92.246.84.133;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
-allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
@@ -1926,5 +1928,6 @@ allow 94.74.164.94;
 allow 95.128.43.164;
 allow 95.143.193.125;
 allow 95.211.174.137;
+allow 95.211.244.28;
 allow 95.216.107.148;
 allow 98.128.173.33;
