--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -66,6 +66,7 @@ deny 107.189.4.12;
 deny 107.189.4.209;
 deny 107.189.5.121;
 deny 107.189.5.188;
+deny 107.189.5.249;
 deny 107.189.5.7;
 deny 107.189.6.124;
 deny 107.189.7.141;
@@ -273,7 +274,6 @@ deny 185.154.110.17;
 deny 185.165.169.239;
 deny 185.165.171.84;
 deny 185.170.114.25;
-deny 185.177.151.34;
 deny 185.183.157.214;
 deny 185.183.159.40;
 deny 185.191.204.254;
@@ -500,6 +500,7 @@ deny 185.42.170.203;
 deny 185.56.171.94;
 deny 185.56.83.83;
 deny 185.67.82.114;
+deny 185.7.78.60;
 deny 185.82.219.109;
 deny 185.84.31.254;
 deny 188.165.200.97;
@@ -1020,6 +1021,7 @@ deny 2605:6400:30:ed0c:b477:4972:756a:2f42;
 deny 2605:6400:30:edc3::34;
 deny 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 deny 2605:6400:30:efba:dead::;
+deny 2605:6400:30:f04d:2605:6400:30:30;
 deny 2605:6400:30:f05d:c272:5525:72b1:e64c;
 deny 2605:6400:30:f060:be62:b857:b818:9144;
 deny 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1256,7 +1258,6 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1538,6 +1539,54 @@ deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
+deny 2a10:1fc0:10::19eb:717b;
+deny 2a10:1fc0:10::28fc:90d4;
+deny 2a10:1fc0:10::2a17:5b54;
+deny 2a10:1fc0:10::2cf4:6ba2;
+deny 2a10:1fc0:10::2d91:1a2d;
+deny 2a10:1fc0:10::3903:457;
+deny 2a10:1fc0:10::3919:de17;
+deny 2a10:1fc0:10::3a1:5e9f;
+deny 2a10:1fc0:10::3dc5:e694;
+deny 2a10:1fc0:10::3eb3:d1d0;
+deny 2a10:1fc0:10::3ec1:2b1e;
+deny 2a10:1fc0:10::40d8:83c;
+deny 2a10:1fc0:10::42d2:f78b;
+deny 2a10:1fc0:10::5138:4dfa;
+deny 2a10:1fc0:10::5719:261d;
+deny 2a10:1fc0:10::61d9:7617;
+deny 2a10:1fc0:10::61e2:c84d;
+deny 2a10:1fc0:10::627f:3c31;
+deny 2a10:1fc0:10::694a:c359;
+deny 2a10:1fc0:10::6b4c:30fc;
+deny 2a10:1fc0:10::6c2e:469a;
+deny 2a10:1fc0:10::6d92:d6ab;
+deny 2a10:1fc0:10::6fde:4b8d;
+deny 2a10:1fc0:10::792f:38b4;
+deny 2a10:1fc0:10::895d:abf9;
+deny 2a10:1fc0:10::8a03:d023;
+deny 2a10:1fc0:10::8b78:d42e;
+deny 2a10:1fc0:10::8d4d:eca2;
+deny 2a10:1fc0:10::9a73:d4f2;
+deny 2a10:1fc0:10::9d80:c9f7;
+deny 2a10:1fc0:10::9e08:e765;
+deny 2a10:1fc0:10::a3a5:49da;
+deny 2a10:1fc0:10::a458:8b37;
+deny 2a10:1fc0:10::a63c:724c;
+deny 2a10:1fc0:10::b571:1205;
+deny 2a10:1fc0:10::bf3f:d195;
+deny 2a10:1fc0:10::c129:61a1;
+deny 2a10:1fc0:10::c385:c7fa;
+deny 2a10:1fc0:10::c7c7:2f84;
+deny 2a10:1fc0:10::d5a6:a292;
+deny 2a10:1fc0:10::d5d0:db30;
+deny 2a10:1fc0:10::d6b7:b3e9;
+deny 2a10:1fc0:10::dbe0:6173;
+deny 2a10:1fc0:10::dbe9:7852;
+deny 2a10:1fc0:10::e4c8:9020;
+deny 2a10:1fc0:10::ea87:5496;
+deny 2a10:1fc0:10::fa6c:cac5;
+deny 2a10:1fc0:10::fdb0:ba7f;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:1467::;
@@ -1750,9 +1799,11 @@ deny 46.182.21.248;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
+deny 46.249.49.183;
 deny 46.250.243.29;
 deny 46.30.188.218;
 deny 46.38.243.210;
+deny 5.101.84.151;
 deny 5.104.84.183;
 deny 5.104.86.6;
 deny 51.15.59.15;
@@ -1763,7 +1814,6 @@ deny 51.81.222.62;
 deny 5.181.80.107;
 deny 5.196.95.34;
 deny 5.255.100.219;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1840,7 +1890,6 @@ deny 80.94.92.92;
 deny 81.16.33.42;
 deny 81.17.28.95;
 deny 81.181.104.22;
-deny 8.211.1.212;
 deny 82.221.128.191;
 deny 82.221.131.5;
 deny 82.221.131.86;
@@ -1855,6 +1904,30 @@ deny 84.19.182.20;
 deny 84.211.226.13;
 deny 84.239.46.144;
 deny 85.239.41.130;
+deny 85.239.55.11;
+deny 85.239.55.110;
+deny 85.239.55.112;
+deny 85.239.55.114;
+deny 85.239.55.123;
+deny 85.239.55.132;
+deny 85.239.55.168;
+deny 85.239.55.173;
+deny 85.239.55.174;
+deny 85.239.55.184;
+deny 85.239.55.189;
+deny 85.239.55.192;
+deny 85.239.55.201;
+deny 85.239.55.228;
+deny 85.239.55.230;
+deny 85.239.55.239;
+deny 85.239.55.24;
+deny 85.239.55.249;
+deny 85.239.55.25;
+deny 85.239.55.250;
+deny 85.239.55.31;
+deny 85.239.55.37;
+deny 85.239.55.51;
+deny 85.239.55.80;
 deny 85.90.196.47;
 deny 85.93.218.204;
 deny 86.54.28.49;
@@ -1868,6 +1941,7 @@ deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
 deny 88.80.26.4;
+deny 89.110.95.200;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
@@ -1896,6 +1970,30 @@ deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.219.236.101;
 deny 91.219.236.91;
+deny 91.227.77.107;
+deny 91.227.77.108;
+deny 91.227.77.119;
+deny 91.227.77.125;
+deny 91.227.77.139;
+deny 91.227.77.158;
+deny 91.227.77.160;
+deny 91.227.77.181;
+deny 91.227.77.193;
+deny 91.227.77.200;
+deny 91.227.77.208;
+deny 91.227.77.209;
+deny 91.227.77.226;
+deny 91.227.77.229;
+deny 91.227.77.237;
+deny 91.227.77.25;
+deny 91.227.77.31;
+deny 91.227.77.36;
+deny 91.227.77.44;
+deny 91.227.77.48;
+deny 91.227.77.51;
+deny 91.227.77.54;
+deny 91.227.77.62;
+deny 91.227.77.97;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
