--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -120,6 +120,7 @@ allow 2401:c080:1c02:2d4::;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 2407:1c00:6100:5640::;
 allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
@@ -427,7 +428,6 @@ allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
-allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a06:1280:bee1:2::ee12:230;
