--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -147,7 +147,6 @@ set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.41.95.1;
 set_real_ip_from 154.41.95.2;
 set_real_ip_from 154.53.58.161;
-set_real_ip_from 157.66.25.92;
 set_real_ip_from 158.174.210.51;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 161.129.68.162;
@@ -205,7 +204,6 @@ set_real_ip_from 176.65.149.100;
 set_real_ip_from 176.65.149.105;
 set_real_ip_from 176.65.149.84;
 set_real_ip_from 176.65.149.87;
-set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 178.17.170.144;
@@ -959,6 +957,7 @@ set_real_ip_from 2401:c080:1c02:2d4::;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
+set_real_ip_from 2407:1c00:6100:5640::;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:3640:2259:6302::1;
 set_real_ip_from 2407:3641:2259:8208::1;
@@ -1274,7 +1273,6 @@ set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:655b::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
-set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6cc4::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
@@ -1941,7 +1939,6 @@ set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
-set_real_ip_from 89.110.95.200;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
@@ -2031,4 +2028,5 @@ set_real_ip_from 95.211.174.137;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.216.107.148;
 set_real_ip_from 96.9.125.211;
+set_real_ip_from 97.74.89.52;
 set_real_ip_from 98.128.173.33;
